# kumparanian

./: .gitignore  .travis.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
interface/: README.md  model.py
interfaces/: README.md  model.py
kumparanian/: __main__.py  cli.py  kumparanian.py
kumparanian/de/: __init__.py  dataset.py  help_text.py  submission.py
kumparanian/ds/: __init__.py  help_text.py  model.py  verify_model.py  verify_model_test.py
tests/: cli_test.py  invalid_label_encoder.pickle  invalid_model.pickle  invalid_pickle.pickle  invalid_tokenizer.pickle  invalid_vectorizer.pickle  kumparanian.output  kumparanian_de_generate_dataset_help.output  kumparanian_de_help.output  kumparanian_de_verify.output  kumparanian_de_verify_help.output  kumparanian_de_verify_invalid.output  kumparanian_de_verify_valid.output  kumparanian_ds.output  kumparanian_ds_evaluate.output  kumparanian_ds_evaluate_help.output  kumparanian_ds_evaluate_model.output  kumparanian_ds_evaluate_model_test.output  kumparanian_ds_verify.output  kumparanian_ds_verify_help.output  kumparanian_ds_verify_invalid_label_encoder.output  kumparanian_ds_verify_invalid_model.output  kumparanian_ds_verify_invalid_model_predict.output  kumparanian_ds_verify_invalid_pickle_file.output  kumparanian_ds_verify_invalid_tokenizer.output  kumparanian_ds_verify_invalid_vectorizer.output  kumparanian_ds_verify_valid_model.output  kumparanian_help.output  sklearn_valid_model.pickle  test_set.csv  tf_valid_model.keras  tokenizer_label_encoder.pickle  valid_model.pickle  vectorizer_label_encoder.pickle
tests/de/de_test_valid/: task_2_result.csv  task_3_result.csv
tests/ds/: model_test.py
