[tool.poetry]
name = "kumparanian"
version = "1.0.5rc3"
description = ""
authors = ["Zavli Juwantara <zavli.juwantara@kumparan.com>"]
license = "kumparan"
readme = "README.md"
packages = [
    { include = "kumparanian" },
    { include = "kumparanian/de" },
    { include = "kumparanian/ds" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
dill = "^0.3.8"
click = "^8.1.7"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
kumparanian = { source = "kumparanian/cli.py", type = "onedir", bundle = true }