[tool.poetry]
name = "kumparanian"
version = "1.2.1"
description = "Kumparanian CLI"
authors = ["Zavli Juwantara <zavli.juwantara@kumparan.com>"]
repository = "https://github.com/kumparan/kumparanian"
maintainers = [
    "Bayu <bayualdiyansyah@gmail.com>",
    "Raden <radenmaharjo@gmail.com>",
    "Aslam <aslam.hadi@kumparan.com>",
    "Ghefira <ghefira.fatimah@kumparan.com>"
]
license = "kumparan"
readme = "README.md"
packages = [
    { include = "kumparanian" },
    { include = "kumparanian/ds" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.24.3"
click = "^8.1.7"
colorama = "^0.4.6"
tensorflow = "2.13.0"
scikit-learn = "1.5.1"
dill = "0.3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pip-audit = "^2.7.3"

[tool.poetry.scripts]
kumparanian = "kumparanian.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
kumparanian = { source = "kumparanian/cli.py", type = "onedir", bundle = true }
